# roguelike_template_rust

./: Cargo.toml  README.md
src/: action.rs  camera.rs  color.rs  entities.rs  gamelog.rs  input.rs  lib.rs  main_cli.rs  main_gui.rs  map.rs  raycast.rs  rect_tools.rs  saveload.rs
src/components/: ai.rs  body.rs  combat.rs  items.rs  mod.rs
src/systems/: ai.rs  body.rs  camera_follow.rs  initiative.rs  map_rendering.rs  mod.rs  movement.rs  viewshed_system.rs
web/: index.html
