[package]
name = "hroguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "maingame"
path = "src/main_gui.rs"

[dependencies]
bevy_ecs = "~0.11"
macroquad="~0.4"
#glam = "~0.24"
rand = "~0.8"
serde= { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

# rustup target install wasm32-unknown-unknown
# cargo install wasm-server-runner
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
# cargo install wasm-bindgen-cli
# cargo build --release --target wasm32-unknown-unknown
# wasm-bindgen --out-dir ./web/ --target web ./target/