[package]
name = "hroguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main_gui"
path = "src/main_gui.rs"
required-features = ["build_gui"]

[[bin]]
name = "main_cli"
path = "src/main_cli.rs"
required-features = ["build_cli"]

[dependencies]
anyhow = "1.0"
bevy_ecs = "~0.11"
candle-core = "~0.3"
candle-nn = "~0.3"
candle-transformers = "~0.3"
#glam = "~0.24"
rand = "~0.8"
safetensors = "*"
serde= { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

# Per-binary builds.  There's not much of an alternative for Cargo in 2023.
macroquad = { version = "~0.4", optional = true }
crossterm = { version = "~0.26", optional = true }

[features]
build_cli = ["crossterm", ]
build_gui = ["macroquad", ]


# rustup target install wasm32-unknown-unknown
# cargo install wasm-server-runner
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
# cargo install wasm-bindgen-cli
# cargo build --release --target wasm32-unknown-unknown
# wasm-bindgen --out-dir ./web/ --target web ./target/